Profile-Page.jsx: moved edit profile button from top of the page to the bottom; removed unneeded divs; re-worded text to better clarify and give context to the page; added a title to the page; ... Profile-Page-Creation.js/css: updated image's material mui, needed to fix image spanning because it was creating a scroll if the viewport was small-- currently in bedrest and using my laptop to edit the site, gave a different perspective than my desktop computer so I adjusted based on viewport of my laptop ; made button uppercase to follow styling; Terms-and-Conditions.js/css: added bold; realized the initial multiple divs (initially decided to leave alone because I did not understand the multiple layers of divs/classes) that the page had created an odd layout to the site on my laptop so I had to inspect and toggle/debug the styling to fix/remove elements that were not needed; … Global-Styles.css: figured out how to hide scroll bars without disabling scroll-- really awesome code, covers up any n00bie design flaws ; Profile-Page.css: completely new css page specifically for the User Profile Page; … Signup-Page.css: updated h1 scale, was too large on laptop; ... ImageSlider.css: updated width/height because the static sizes would make images janky;

--- a/src/components/css/Profile-Page-Creation.css
+++ b/src/components/css/Profile-Page-Creation.css
@@ -39,12 +39,11 @@
     font-family: Verdana;
     margin-top: 0px;
     width: 50%;
-    padding-top: 2%;
-    padding-bottom: 2%;
+    padding: 2% 3%;
     margin-bottom: 4%;
 }
 
-.profileContent Button{
+.profileContent button{
     font-family: Verdana;
     font-weight: bold;
     height: 40px;
