--- a/src/components/css/TermsConditions.css
+++ b/src/components/css/TermsConditions.css
@@ -15,18 +15,14 @@
 }
 
 .box {
-  max-height: 600px;
+  /* max-height: 600px; */
   max-width: 800px;
   padding: 60 30px;
   font-family: Verdana;
 }
 
 .anotherBox {
-  padding: 0 20px;
-  height: 300px;
-  font-family: Verdana;
   font-size: 18px;
-  justify-content: center;
 }
 
 .terms {
