--- a/src/components/modules/ImageSlider.css
+++ b/src/components/modules/ImageSlider.css
@@ -7,8 +7,8 @@
   }
   
   .imagev2 {
-    width: 1000px;
-    height: 600px;
+    max-width: auto;
+    max-height: 600px;
     border-radius: 10px;
   }
   
